fixed scrollbar sapce showing issue_the parallax effect

--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,15 @@
 .frame{
   margin-left: 100px;
   top: 0%;
- 
+  left: 0;
 
 }
 
 .App{
  position: relative;
-  background-color: rebeccapurple;
+  background-color: rgb(0, 0, 0);
+  left: 0;
+  top: 0;
   width:100%;
   height: 100%;
   scroll-snap-type: x mandatory;
@@ -26,12 +28,16 @@
 
  
 }
+.App::-webkit-scrollbar {
+  display: none;
+}
 body{
-  overflow: hidden;
+  overflow-y: hidden;
 }
 .background{
   position: fixed;
   top: 0;
+  left: 0;
   width:100%;
   height:100%;
   transition: 3s ;
